fixed rounded corners with scrollbar on desktop queue

--- a/src/index.css
+++ b/src/index.css
@@ -70,8 +70,8 @@ a {
 
 @media screen and (min-width: 1024px) {
 	::-webkit-scrollbar {
-		width: 12px;
-		@apply bg-background-darker;
+		width: 8px;
+		@apply bg-background-dark;
 	}
 
 	::-webkit-scrollbar-thumb {
@@ -80,9 +80,5 @@ a {
 
 	::-webkit-scrollbar-thumb:hover {
 		background-color: rgba(255, 255, 255, 0.3);
-	}
-
-	::-webkit-scrollbar-corner {
-		background-color: rgb(15 23 42 / var(--tw-bg-opacity));
 	}
 }
